Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114619

QCanDbcFileParser fails to parse non-ASCII characters like '°'

XMLWordPrintable

    • c7cdbe4cc (dev), 2e5dd66c7 (6.5), b601165dc (6.6)

      See the attached sample which contains a signal with the unit "°C". QCanDbcFileParser cannot read that signal and produces a warning, "Failed to find signal description in string...", and then drops the signal completely.

      This occurs because QCanDbcFileParser uses QString::fromLatin1(): https://github.com/qt/qtserialbus/blob/v6.5.1/src/serialbus/qcandbcfileparser.cpp#L342

        1. qtbug114619.zip
          1 kB
          Sze Howe Koh
        For Gerrit Dashboard: QTBUG-114619
        # Subject Branch Project Status CR V

            mikolaj.boc Mikołaj Boc (Inactive)
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes