Accept any printable character in CAN DBC char_string

CAN DBC char_string can accept any printable character, according
to standard specification. For now, only 0x20 - 0x7E were accepted,
which made some possible characters, including e.g. the degree sign
U+00B0 to not get correctly parsed.

Fixes: QTBUG-114619
Change-Id: I51766e847110641f786ab1f5f3aed89572335d6f
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>
(cherry picked from commit c7cdbe4cc4ba4b4456a4cbab4eaea2ea9b6326ed)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>